<resources>
    <string name="app_name">Data Structures</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="manvitha_roy">Manvitha Roy</string>
    <string name="manvitharoyal110_gmail_com">manvitharoyal110@gmail.com</string>
    <string name="slides">Slides</string>
    <string name="website">website</string>
    <string name="contact">contact</string>
    <string name="button">Button</string>
    <string name="title_activity_chapter1">chapter1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="send">send</string>
    <string name="introduction">Introduction</string>
    <string name="arrays">Arrays</string>
    <string name="linkedlist">Linkedlist</string>
    <string name="stacks">Stacks</string>
    <string name="queues">Queues</string>
    <string name="searching_and_sorting">Searching and sorting</string>
    <string name="graphs">Graphs</string>
    <string name="trees">Trees</string>
    <string name="quiz">Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="github">Github</string>
    <string name="click_on_the_image_to_view_the_webiste">(click on the image to view the webiste)</string>
    <string name="username">Username :</string>
    <string name="manvitharoy123">manvitharoy123</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="manvitharoy">manvitharoy</string>
    <string name="click_on_the_image_to_send_an_email_to_the_developer">(click on the image to send an email to the developer)</string>
</resources>