<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="data.manu.myapplication.ui.gallery.GalleryFragment"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/ham">

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2" />
        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:autoLink="web"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@drawable/github"
            android:contentDescription="@string/github"
            android:focusable="true" />

        <TextView
            android:layout_width="396dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/click_on_the_image_to_view_the_webiste"
            android:textColor="#121111"
            android:textSize="18sp" />
        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:importantForAutofill="no"
            android:text="@string/username"
            android:textColor="#0C0C0C"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/manvitharoy123"
            android:textColor="#AD1457"
            android:textSize="30sp"
            android:textStyle="bold" />
        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/linkedlist"
            android:scaleType="centerInside"
            android:src="@drawable/linkedlogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/click_on_the_image_to_view_the_webiste"
            android:textColor="#0B0A0A"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/name"
            android:textColor="#0C0C0C"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="392dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/manvitharoy"
            android:textColor="#283593"
            android:textSize="30sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2" />
        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/emaillogo"
            android:contentDescription="@string/email" />
        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/click_on_the_image_to_send_an_email_to_the_developer"
            android:textColor="#0B0A0A"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#0C0C0C"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/manvitharoyal110_gmail_com"
            android:textColor="#F8770D"
            android:textSize="30sp"
            android:textStyle="bold" />
        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2" />


    </LinearLayout>
</ScrollView>